[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/easycpp/scripts/buildconfigurationsetting.gd" type="Script" id=1]

[node name="BuildConfiguration" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
custom_constants/separation = 4

[node name="NameLabel" type="Label" parent="VBoxContainer/NameContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/NameContainer"]
margin_left = 46.0
margin_right = 942.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="EnabledCheckBox" type="CheckBox" parent="VBoxContainer/NameContainer"]
margin_left = 946.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Enabled"

[node name="PropertiesContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 386.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="ArgumentsLabel" type="Label" parent="VBoxContainer/PropertiesContainer"]
margin_top = 64.0
margin_right = 165.0
margin_bottom = 95.0
text = "Arguments:
  (One argument per line.)"

[node name="ArgumentsEdit" type="TextEdit" parent="VBoxContainer/PropertiesContainer"]
margin_left = 169.0
margin_right = 1024.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3

[node name="DefinesLabel" type="Label" parent="VBoxContainer/PropertiesContainer"]
margin_top = 228.0
margin_right = 165.0
margin_bottom = 259.0
text = "Defines:
  (One define per line.)"

[node name="DefinesEdit" type="TextEdit" parent="VBoxContainer/PropertiesContainer"]
margin_left = 169.0
margin_top = 164.0
margin_right = 1024.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3

[node name="DebugLibLabel" type="Label" parent="VBoxContainer/PropertiesContainer"]
margin_top = 333.0
margin_right = 165.0
margin_bottom = 347.0
text = "Use debug libraries:"

[node name="DebugLibCheckbox" type="CheckBox" parent="VBoxContainer/PropertiesContainer"]
margin_left = 169.0
margin_top = 328.0
margin_right = 1024.0
margin_bottom = 352.0
size_flags_horizontal = 3

[connection signal="text_changed" from="VBoxContainer/NameContainer/NameLineEdit" to="." method="_on_NameLineEdit_text_changed"]
